--- a/less/editor.less
+++ b/less/editor.less
@@ -740,6 +740,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   top: -20px;
   font-size: 16px;
   cursor: pointer;
+  margin-right:5px;
 }
 .close-tips:hover {
   color: #A5A1A1;
