--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -700,6 +700,7 @@ a.fm-panel-controlArrowRight > span {
   top: -20px;
   font-size: 16px;
   cursor: pointer;
+  margin-right: 5px;
 }
 .close-tips:hover {
   color: #A5A1A1;
