--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -304,6 +304,7 @@
         overflow: hidden;
         border-radius: 4px;
         margin-bottom: 10px;
+        color: #fff;
     }
 
     li.list-group-item {
@@ -538,8 +539,8 @@
     }
     .show-tips {
         text-align: center;
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         cursor: pointer;
         margin: 10px;
         transition: all 0.5s;
