分歧全部类型面板的title样式

--- a/scripts/components/road/tpls/attr_branch_Tpl/signAsRealOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/signAsRealOfBranch.html
@@ -1,8 +1,7 @@
 <div class="nameOfBraDiv fm-component" ng-controller="SignAsRealOfBranchCtrl">
     <div class="title">
         实景看板
-        <label ng-class="{'active':$index==0,'btn btn-primary btn-xs':true}" ng-bind="branchPid">
-        </label>
+        <span class="label label-info" ng-bind="branchPid"></span>
     </div>
 
     <div class="picMapShow">
