--- a/scripts/components/road/tpls/attr_branch_Tpl/signBoardOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/signBoardOfBranch.html
@@ -2,8 +2,7 @@
     <div class="fm-component" >
         <div class="title">
             方向看板
-            <label ng-class="{'active':$index==0,'btn btn-primary btn-xs':true}" ng-bind="branchPid">
-            </label>
+            <span class="label label-info" ng-bind="branchPid"></span>
         </div>
 
         <div class="content">
