--- a/scripts/components/road/tpls/attr_branch_Tpl/seriesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/seriesOfBranch.html
@@ -1,8 +1,7 @@
 <div class="nameOfBraDiv fm-component" ng-controller="SeriesOfBranchCtrl">
     <div class=title>
         连续分歧
-        <label ng-class="{'active':$index==0,'btn btn-primary btn-xs':true}" ng-bind="branchPid">
-        </label>
+        <span class="label label-info" ng-bind="branchPid"></span>
     </div>
 
     <div class="picMapShow">
