poi相关问题，警示信息图标，更改限速属性按钮显示POI信息的bug

--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -35,8 +35,9 @@
     .right img{
         height: 35px;
         width: 35px;
-        margin-bottom: -8px;
-        margin-top: -8px;
+        margin-bottom: 8px;
+        margin-top: 8px;
+        margin-left: 4px;
     }
     .both {
         width: 95%;
