--- a/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
@@ -115,6 +115,9 @@
                 <input type="text" ng-model="oridiData.inputTime" ng-disabled="oridiData.nameClass!=3" ng-class="{'chosen-disabled':oridiData.nameClass!=3}"/>
             </div>
         </li>
+        <li class="list-group-item">
+            <label class="control-label" style="color:#EA7070;">合法的道路名数据应该来源于道路名库</label>
+        </li>
     </ul>
     </form>
 </div>
