--- a/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
@@ -151,13 +151,13 @@
         </div>
         <!--end 模式图信息-->
         <!--begin 名称信息-->
-        <div ng-if="diverObj.details[0].branchType == 1||diverObj.details[0].branchType == 2" class="content">
+        <!-- <div ng-if="diverObj.details[0].branchType == 1||diverObj.details[0].branchType == 2" class="content">
             <div class="module-box show-detail-title" ng-click="showDetail(0);">
                 <div class="box-head font-bold">
                     名称信息（共 <span ng-bind="diverObj.details[0].names.length"></span> 条）
                 </div>
             </div>
-        </div>
+        </div> -->
 		<div ng-if="diverObj.details[0].branchType == 1||diverObj.details[0].branchType == 2" class="content">
 			<div class="content">
             <ul class="list-group list-group-lg m-b-none">
