--- a/scripts/components/road/tpls/attr_branch_Tpl/signBoardOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/signBoardOfBranch.html
@@ -121,11 +121,11 @@
 	            </ul>
         	</div>
 		</div>
-        <div class="module-box show-detail-title" ng-click="showDetail(0);">
+        <!-- <div class="module-box show-detail-title" ng-click="showDetail(0);">
             <div class="box-head font-bold">
                 名称信息（共 <span ng-bind="diverObj.signboards[0].names.length"></span> 条）
             </div>
-        </div>
+        </div> -->
         <!--end 名称信息-->
         <!--begin 经过线-->
         <div class="module-box show-detail-title" ng-click="showDetail(1);">
