--- a/scripts/components/road/tpls/attr_branch_Tpl/signBoardNameTpl.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/signBoardNameTpl.html
@@ -45,16 +45,10 @@
                         </div> 
                     </li>
                     <li>
-                        <!-- <label>名称分类：</label>
-                        <div class="btn-group d-radio-btn" data-toggle="buttons" style="z-index:0">
-                          <label ng-class="{'btn-primary active':n.code==info.nameClass,'btn-default':n.code!=info.nameClass,'btn btn-sm':true}" ng-repeat="n in nameClassType" ng-click="switchNameClass(n.code,info.nameGroupid)">
-                            <input type="radio" name="nameClass{{info.nameClass}}" autocomplete="off" data-relation-type="{{n.code}}">{{n.label}}
-                          </label>
-                        </div> -->
                         <label>名称分类：</label>
                         <div class="fm-control">
                             <div class="btn-group d-radio-btn" data-toggle="buttons" style="z-index:0">
-                              <label ng-class="{'btn-primary active':n.code==info.nameClass,'btn-default':n.code!=info.nameClass,'btn btn-sm':true}" ng-repeat="n in nameClassType" ng-click="switchNameClasss(n.code,info.nameGroupid,$parent.$index)">
+                              <label ng-class="{'btn-primary active':n.code==info.nameClass,'btn-default':n.code!=info.nameClass,'btn btn-sm':true}" ng-repeat="n in nameClassType" ng-click="switchNameClass(n.code,info.nameGroupid,$parent.$index)">
                                 <input type="radio" name="nameClass{{info.nameClass}}" autocomplete="off" data-relation-type="{{n.code}}">{{n.label}}
                               </label>
                             </div>
