检查结果样式避免表格头部换行出现垂直滚动条

--- a/less/editor.less
+++ b/less/editor.less
@@ -594,6 +594,9 @@ label > input[type='checkbox'] {
 }
 .fm-console-table {
   color: #ffffff;
+  thead th:last-child{
+    white-space: nowrap;
+  }
   margin-top: 5px;
   & > tbody > tr > td {
     padding: 0 3px;
