--- a/scripts/components/road/tpls/attr_branch_Tpl/schematicOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/schematicOfBranch.html
@@ -46,7 +46,7 @@
                             </button>
                         </div>
                         <div class="pic-show-well">
-                            <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName)">
+                            <div class="img-well" style="width: 78px;" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName)">
                                 <img class="show-img" ng-src="{{picture.fileContent}}" title="{{picture.fileName}}">
                                 <div class="img-describe">{{picture.fileName}}</div>
                             </div>
