--- a/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectNameTpl.html
+++ b/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectNameTpl.html
@@ -1,9 +1,9 @@
 /**
 * Created by liuyang on 2016/8/24.
 */
-<div ng-controller="crfObjectNameCtrl" id="namesOfLinkDiv">
-    <form name="nameDetailForm">
-        <ul  class="list-group list-group-lg m-b-none" style="margin-bottom: 5px">
+<div ng-controller="crfObjectNameCtrl" id="namesOfLinkDiv" style="height: 100%;">
+    <form name="nameDetailForm" style="height: 100%;">
+        <ul  class="list-group list-group-lg m-b-none" style="margin-bottom: 5px;height: 100%;">
             <li class="list-group-item">
                 <div><label class="control-label">名称组号</label></div>
                 <div class="inline"><input type="text" ng-model="oridiData.nameGroupid" disabled/></div>
@@ -26,7 +26,7 @@
                 </div>
             </li>
             <li class="list-group-item" id="name" style="display: none;width: 95%;">
-                <div class="pic-show">
+                <div class="pic-show" style="right: 29px;width: 200px;">
                     <div class="option-hide">
                         <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" ng-click="hidePicSelect($event)"></span>
                     </div>
