修改交叉路口选择和查询，修改rdlink方向后刷新电子眼

--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -40,9 +40,7 @@
         margin-left: 4px;
     }
     .both {
-        width: 95%;
         margin-top: 5px;
-        padding-left: 10px;
     }
     #sceneRoadTipsDiv {
         width: 100%;
@@ -342,7 +340,7 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('f') && dataTipsData.isCrossRoad">
                             <label class="col-sm-5 control-label" style="padding: 4px">关联Node:</label>
                             <div class="col-sm-7 text-ellipsis" style="padding: 3px;cursor: pointer;">
-                                <span class="label" ng-bind="dataTipsData.f.id" title="{{dataTipsData.f.id}}" ng-click="getFeatDataCallback(dataTipsData.f.id,'RDLINK')"></span>
+                                <span class="label" ng-bind="dataTipsData.f.id" title="{{dataTipsData.f.id}}" ng-click="getFeatDataCallback(dataTipsData.f.id,'RDCROSS')"></span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('rdDir')">
@@ -354,14 +352,14 @@
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('value') && !dataTipsData.isDrivewayLimit">
                             <label class="col-sm-5 control-label" style="padding: 4px">限&nbsp; 速&nbsp; 值:</label>
-                            <div class="col-sm-7" style="padding: 4px">
-                                <span class="label ">{{dataTipsData.value}} km/h</span>
+                            <div class="col-sm-7 text-ellipsis" style="padding: 4px">
+                                <span class="label " title="{{dataTipsData.value}}">{{dataTipsData.value}} km/h</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('value') && dataTipsData.isDrivewayLimit">
                             <label class="col-sm-5 control-label" style="padding: 4px">限&nbsp; 速&nbsp; 值:</label>
-                            <div class="col-sm-7" style="padding: 4px">
-                                <span class="label ">{{dataTipsData.limitValue}} km/h</span>
+                            <div class="col-sm-7 text-ellipsis" style="padding: 4px">
+                                <span class="label " title="{{dataTipsData.limitValue}}>{{dataTipsData.limitValue}} km/h</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('se')">
@@ -572,10 +570,11 @@
                         </div>
                         <!--end 辅路-->
                         <!--begin 禁止驶入-->
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.eliminateCarObj">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('vt')">
                             <label class="col-sm-5 control-label" style="padding: 4px">例外车辆:</label>
                             <div class="col-sm-7" style="padding: 3px">
-                                <span ng-repeat="item in dataTipsData.eliminateCarObj" ng-class="{'seleted-text':item.checked,'unselected-text':!item.checked,'label col-sm-6 text-left':true}" ng-bind='item.label'></span>
+                                <span ng-repeat="item in dataTipsData.eliminateCarObj" class="label col-sm-6 text-left" ng-if="item.checked" ng-bind='item.label'></span>
+                                <!--<span ng-repeat="item in dataTipsData.eliminateCarObj" ng-class="{'seleted-text':item.checked,'unselected-text':!item.checked,'label col-sm-6 text-left':true}" ng-bind='item.label'></span>-->
                             </div>
                         </div>
                         <!--end 禁止驶入-->
