--- a/scripts/components/poi/tpls/attr-deep/chargingPlotTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/chargingPlotTpl.html
@@ -1,6 +1,6 @@
 <div ng-controller="chargingPlotCtrl">
     <div ng-show="propertyType=='deep'">
-        <div class="fm-panel">
+        <div class="fm-panel" form-disabled>
             <div class="content" ng-repeat="charging in chargingArr">
                 <ul>
                     <a href="#deepInfoOne" data-toggle="tab" data-width="">专有信息{{$index+1}}
@@ -8,12 +8,12 @@
                              ng-if="chargingArr.length==2">
                             <button data-toggle="tooltip" data-index="{{$index}}" title="删除"
                                     class="glyphicon glyphicon-remove" type="button"
-                                    ng-click="removeChargPole($index)"/>
+                                    ng-click="removeChargPole($index)" ng-disabled="isSpecialOperation"/>
                         </div>
                         <div class="btn-group" style="display: inline-block;float: right;"
                              ng-if="chargingArr.length==1 ||chargingArr.length==0">
                             <button data-toggle="tooltip" title="添加" class="glyphicon glyphicon-plus"
-                                    style="margin-right: 5px;" type="button" ng-click="addChargPole()"/>
+                                    style="margin-right: 5px;" type="button" ng-click="addChargPole()" ng-disabled="isSpecialOperation"/>
                         </div>
                     </a>
                 </ul>
@@ -47,7 +47,7 @@
                             <label ng-repeat="(key, value) in chargingPlugType" class="col-md-5">
                                 <input fm-edit-view fm-edit-view type="checkbox" value="{{key}}"
                                        ng-model="charging.plugType[key]"
-                                       ng-click="chargingPlugTypeChange($event)"> {{value}}
+                                       ng-click="chargingPlugTypeChange($event)" ng-disabled="isSpecialOperation"> {{value}}
                             </label>
                         </div>
                     </li>
@@ -96,16 +96,16 @@
                             <label ng-repeat="(key, value) in chargingOpenType" ng-if="key == 1"
                                    style="padding:0px;color:green">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="charging.openType[key]"
-                                       ng-click="changeOpenType($event,charging)"> {{value}}
+                                       ng-click="changeOpenType($event,charging)" ng-disabled="isSpecialOperation"> {{value}}
                             </label>
                             <label ng-repeat="(key, value) in chargingOpenType" ng-if="key != 1">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="charging.openType[key]"
-                                       ng-click="changeOpenType($event,charging)"> {{value}}
+                                       ng-click="changeOpenType($event,charging)" ng-disabled="isSpecialOperation"> {{value}}
                             </label>
                             <div>
                                 <select fm-edit-view class="fm-control" ng-model="charging.selectedChain"
                                         ng-options="value as lable.chainName for (value, lable) in charging.chargeChainObj"
-                                        chosen style="width: 80%;" ng-change="chianChange($event, charging)">
+                                        chosen style="width: 80%;" ng-change="chianChange($event, charging)" ng-disabled="isSpecialOperation">
                                 </select>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                         <label>可用状态</label>
                         <div>
                             <select fm-edit-view class="fm-control" ng-model="charging.availableState"
-                                    ng-options="value.id as value.label for value in chargingAvailableState">
+                                    ng-options="value.id as value.label for value in chargingAvailableState" ng-disabled="isSpecialOperation">
                             </select>
                         </div>
                     </li>
@@ -175,7 +175,7 @@
                             <div>
                                 <select fm-edit-view class="fm-control" ng-model="charging.chargingPayment"
                                         ng-options="value as lable.chainName for (value, lable) in charging.chargingPayment"
-                                        chosen style="width: 80%;" ng-change="chianChange($event, charging)">
+                                        chosen style="width: 80%;" ng-change="chianChange($event, charging)" ng-disabled="isSpecialOperation">
                                 </select>
                             </div>
                         </div>
