--- a/scripts/components/poi/tpls/attr-deep/hotelTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/hotelTpl.html
@@ -1,6 +1,6 @@
 <div ng-controller="hotelCtl">
     <div ng-show="propertyType=='deep'">
-        <div class="fm-panel" >
+        <div class="fm-panel" form-disabled>
             <div class="content" style="padding-bottom: 30px;">
                 <ul class="fm-ul fm-ul-form">
                     <li>
