--- a/scripts/components/poi/tpls/attr-deep/sportsVenuesTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/sportsVenuesTpl.html
@@ -1,13 +1,13 @@
 <div ng-controller="SportsVenuesCtl">
     <div ng-show="propertyType=='deep'">
-        <div class="fm-panel" >
+        <div class="fm-panel" form-disabled>
             <div class="content" style="padding-bottom: 30px;">
                 <ul class="fm-ul fm-ul-form">
                     <li>
                         <label>场馆类型</label>
                         <div class="block">
                             <label ng-repeat="(key, value) in sportsVenuesBuildingType" ng-if="true">
-                                <input type="checkbox" value="{{key}}" ng-model="poi.sportsVenue[key]"> {{value}}
+                                <input type="checkbox" value="{{key}}" ng-model="poi.sportsVenue[key]" ng-disabled="isSpecialOperation"> {{value}}
                             </label>
                         </div>
                     </li>
