修改tips查看图片功能

--- a/scripts/components/road/tpls/attr_tips_tpl/tipsPictureTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/tipsPictureTpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="tipsPictureController">
+<div ng-controller="tipsPictureController" style="height:100%;">
     <div class="modal-header">
         <div class="pull-right" id="fullPicBtn" ng-click="showFullPic();" title="全屏">
             <span class="glyphicon glyphicon-fullscreen"></span>
@@ -12,7 +12,7 @@
             图片
         </h4>
     </div>
-    <div class="modal-body">
+    <div class="modal-body" style="height: 80%;">
         <!--<div class="road-switch-left" ng-click="switchPic(0);">
             <img src="../../../images/road/img/left.png">
         </div>-->
