--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -23,8 +23,8 @@
   text-align: left;
 }
 #imgContainer {
-  width: 520px;
-  height: 300px;
+  height: 100%;
+  text-align: center;
 }
 #imgContainer1 {
   width: 280px;
@@ -71,15 +71,19 @@
   background-image: url("../../scripts/libs/e-smart-zoom/img/transparent.png");
 }
 #dataTipsOriginModal {
-  top: 90px;
-  left: 553px;
   background-color: #fff;
   position: absolute;
-  z-index: 999999;
-  width: 570px;
+  z-index: 99;
+  width: 40%;
   border: 1px solid #9D9D9D;
   box-shadow: 4px 4px 8px 4px #333;
   border-radius: 4px;
+  height: 80%;
+  top: 40px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 #dataTipsVideoModal {
   top: 150px;
