--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -185,7 +185,9 @@
 </div>
 <div class="fm-top-btn split"></div>
 <div class="fm-top-btn-group">
-    <button class="fm-top-btn blank" title="执行检查" ng-click="openAdvancedToolsPanel('check')">检</button>
+    <button class="fm-top-btn blank" title="执行检查" ng-click="openAdvancedToolsPanel('check')">检
+        <div class="fm-top-btn loading" ng-if="checkRunning"></div>
+    </button>
     <button class="fm-top-btn blank" title="批处理" ng-click="openAdvancedToolsPanel('batch')">批
         <div class="fm-top-btn loading" ng-if="batchRunning"></div>
     </button>
