检查结果表格显示优化处理

--- a/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
+++ b/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
@@ -12,9 +12,9 @@
                 <td colspan="{{theadInfo.length}}" class="text-center">没有找到匹配的记录</td>
             </tr>
             <tr ng-repeat="row in checkResultData">
-                <td title="{{row.ruleid}}" width="6%" class="fm-table-long-text">{{row.shortRuleId}}</td>
-                <td width="59">
-                    <div style="width: 59px">
+                <td title="{{row.ruleid}}" width="125" class="text-ellipsis">{{row.shortRuleId}}</td>
+                <td width="60">
+                    <div style="width: 60px">
                         <span ng-if="row.rank==0" >无 </span>
                         <span ng-if="row.rank==1" >Fatal </span>
                         <span ng-if="row.rank==2" >Critical </span>
@@ -33,15 +33,15 @@
                     </div>
                 </td>
                 <td>
-                    <div ng-style="descriptStyle" title="{{row.information}}">{{row.shortInfo}}</div>
+                    <div ng-style="setTableCeilWidth()" title="{{row.information}}">{{row.shortInfo}}</div>
                 </td>
-                <td width="5%">
+                <td width="110">
                     <div>{{row.create_date.substr(0,10)}}</div>
                 </td>
-                <td width="47">
-                    <div style="width:47px">{{row.worker}}</div>
+                <td width="110">
+                    <div style="width:110px">{{row.worker}}</div>
                 </td>
-                <td width="103">
+                <td width="110">
                     <select class="fm-control" ng-model="initType"
                             ng-options="value.id as value.label for value in initTypeOptions"   ng-change="changeType(initType,row.id)">
                     </select>
