--- a/scripts/components/road/tpls/attr_link_tpl/namesOfRwDetailTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/namesOfRwDetailTpl.html
@@ -8,14 +8,12 @@
             <li class="list-group-item">
                 <div><label class="control-label">道路名称</label></div>
                 <div class="inline">
-                    <input type="text" ng-model="rwName.name" style="width: 150px"/>
-                    <span  class="glyphicon glyphicon-search"
+                    <input type="text" ng-model="rwName.name"/>
+                    <span  class="glyphicon glyphicon-search" style="margin-left:-20px"
                             ng-click="searchGroupidByNames($index)">
                     </span>
                 </div>
-            </li>
-            <li class="list-group-item" id="name" style="display: none;">
-                <div class="pic-show">
+                <div class="pic-show" style="min-width: 260px;max-width: 260px;position: fixed;display: none;">
                     <div class="option-hide" style="color: darkgrey">
                             <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" style="cursor: pointer;" ng-click="hidePicSelect($event)"></span>
                     </div>
@@ -50,6 +48,9 @@
                     </div>
                 </div>
             </li>
+            <li class="list-group-item">
+            	<label class="control-label" style="color:#EA7070;">合法的道路名数据应该来源于道路名库</label>
+        	</li>
         </ul>
     </form>
 </div>
