--- a/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
+++ b/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
@@ -12,7 +12,9 @@
                 <td colspan="{{theadInfo.length}}" class="text-center">没有找到匹配的记录</td>
             </tr>
             <tr ng-repeat="row in checkResultData">
-                <td title="{{row.ruleid}}" width="125" class="text-ellipsis">{{row.shortRuleId}}</td>
+                <td width="120">
+                    <div style="width: 120px" class="text-ellipsis" title="{{row.ruleid}}">{{row.shortRuleId}}</div>
+                </td>
                 <td width="60">
                     <div style="width: 60px">
                         <span ng-if="row.rank==0" >无 </span>
@@ -38,9 +40,9 @@
                 <td width="110">
                     <div>{{row.create_date.substr(0,10)}}</div>
                 </td>
-                <td width="110">
-                    <div style="width:110px">{{row.worker}}</div>
-                </td>
+                <!--<td width="110">-->
+                    <!--<div style="width:110px">{{row.worker}}</div>-->
+                <!--</td>-->
                 <td width="110">
                     <select class="fm-control" ng-model="initType"
                             ng-options="value.id as value.label for value in initTypeOptions"   ng-change="changeType(initType,row.id)">
